# 404

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  READMEleg.md  SECURITY.md  captchaBUG.md  compose.yaml  patch.md
.REL_notes/: RELEASE_V2.5.md  RELEASE_v.02.md  RELEASE_v.03.md  RELEASE_v.1.1.md  RELEASE_v01.md  RELEASE_v1.0.md  RELEASE_v2.0.md  RELEASE_v2.6.md  changelog.md  secAudit.md  v1_developersLog.md
.REL_notes/leg/: devLog.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/scripts/: build-distro-release-manifest.mjs  build-static-release-manifest.mjs
.github/workflows/: distro-release.yml  (+2 more)
distro/: Dockerfile.build  README.md  build.sh
docs/: SECURITY.md  VMConfig.md
scripts/: inspect-ebpf-state.sh  musl-zig-wrapper.sh  resolve-libclang-path.sh  resolve-zig-cxx-runtime.sh  run-static-with-ebpf-caps.sh  setup-musl-toolchain.sh  update-static-profile-manifest.ps1  verify-distro-publication.sh  verify-ebpf-attach.sh
src/STATIC_proxy/: Cargo.toml  Dockerfile  README.md  build.rs  package-lock.json
src/STATIC_proxy/.cargo/: config.toml
src/STATIC_proxy/assets/js/: 0bootstrap_v4.js  1globals_shim_v4.js  2fingerprint_spoof_v4.js  behavioral_noise_v1.js  config_layer_v3.js
src/STATIC_proxy/assets/js/src/: runtime.js
src/STATIC_proxy/assets/js/src/capabilities/: battery.js  media-capabilities.js  network.js  notifications.js  permissions.js  storage.js
src/STATIC_proxy/assets/js/src/contexts/: iframe.js
src/STATIC_proxy/assets/js/src/core/: browser.js  config.js  entropy.js  guard.js  native-refs.js  nonce.js  policy.js  toString.js
src/STATIC_proxy/assets/js/src/evasion/: automation.js  geolocation.js
src/STATIC_proxy/assets/js/src/identity/: fonts.js  navigator.js  performance.js  plugins.js  screen.js  timezone.js
src/STATIC_proxy/assets/js/src/privacy/: beacon-blackhole.js
src/STATIC_proxy/assets/js/src/spoofing/: audio.js  canvas.js  event-timing.js  gamepad.js  media-devices.js  speech.js  webgl.js  webrtc.js
src/STATIC_proxy/config/: app.config.toml  static.chrome.toml  static.example.toml
src/STATIC_proxy/profiles/: chrome-windows.json  edge-windows.json  firefox-windows.json  manifest.json
src/STATIC_proxy/profiles/primitives/: windows-tcp.json
src/STATIC_proxy/src/: app.rs  assets.rs  control.rs  ebpf.rs  lib.rs  main.rs  telemetry.rs
src/STATIC_proxy/src/behavior/: mod.rs
src/STATIC_proxy/src/config/: mod.rs  profiles.rs  settings.rs
src/STATIC_proxy/src/keystore/: mod.rs
src/STATIC_proxy/src/proxy/: client.rs  connection.rs  fetcher.rs  flow.rs  mod.rs  pipeline.rs  server.rs
src/STATIC_proxy/src/proxy/stages/: alt_svc.rs  behavior.rs  cookie.rs  csp.rs  header_profile.rs  js.rs  mod.rs
src/STATIC_proxy/src/tls/: cert.rs  fingerprint.rs  handshake.rs  mod.rs  profiles.rs
src/STATIC_proxy/src/utils/: error.rs  logging.rs  mod.rs
src/STATIC_proxy/tests/unit/: pipeline_tests.rs  tls_tests.rs
(+30 files in other folders)
