[package]
name = "static_proxy"
version = "0.1.0"
edition = "2021"
authors = ["404 Contributors"]
description = "STATIC: Synthetic Traffic and TLS Identity Camouflage"
license = "AGPL-3.0"

[dependencies]
anyhow = "*"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
http = "*"
hyper = { version = "*", features = ["full"] }
hyper-util = { version = "*", features = ["full"] }
h2 = "0.4"
include_dir = "0.7"
md-5 = "0.10"
notify = "6"
parking_lot = "0.12"
rand = "0.8"
rcgen = { version = "0.12", features = ["pem"] }
once_cell = "1.19"
rustls = { version = "0.23", features = ["log"] }
rustls-pemfile = "1"
serde = { version = "=1.0.220", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha2 = "0.10"
thiserror = "1"
time = { version = "0.3.47", features = ["macros"] }
tls-parser = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
webpki-roots = "0.26"
x509-parser = "0.16"
lru = "0.16.3"
pem = "3.0.6"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
cookie = "0.18"
publicsuffix = { version = "2.3", default-features = true }
brotli = "3"

keyring = { version = "3.6.3", features = ["apple-native"] }
windows-sys = { version = "0.48", features = ["Win32_Security_Cryptography", "Win32_System_Memory"] }

[dev-dependencies]
tempfile = "3"