[package]
name = "static_proxy"
version = "0.1.0"
edition = "2021"
authors = ["404 Contributors"]
description = "STATIC: Synthetic Traffic and TLS Identity Camouflage"
license = "AGPL-3.0"

[dependencies]
anyhow = "*"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
http = "*"
h2 = "0.4"
md-5 = "0.10"
parking_lot = "0.12"
rand = "0.8"
rcgen = { version = "0.12", features = ["pem"] }
once_cell = "1.19"
rustls = { version = "0.23", features = ["log"] }
serde = { version = "=1.0.220", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha2 = "0.10"
thiserror = "1"
time = { version = "0.3.47", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
lru = "0.16.3"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
brotli = "3"
zstd = "0.13"
wreq = "5.3.0"

keyring = { version = "3.6.3", features = ["apple-native"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }

[dev-dependencies]
tempfile = "3"